--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -32,5 +32,5 @@ jobs:
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
       - uses: google-github-actions/setup-gcloud@v0
-      - run: gsutil -m rsync -d -c -r dist gs://cancy-website-bucket
+      - run: gsutil -m rsync -u -d -c -r dist gs://cancy-website-bucket
       - run: gsutil -m setmeta -h "Cache-Control:public, max-age=3600" gs://cancy-website-bucket/**
